# intro-to-robotics

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: CMake.yml
include/: forward_kinematics.h  inverse_kinematics.h  transforms.h
scripts/docker/: run_unit_test.sh
src/: forward_kinematics.cpp  inverse_kinematics.cpp  main.cpp  transforms.cpp
test/: CMakeLists.txt  forward_kine_tests.cpp  robotics_tests.cpp  transformation_tests.cpp
